--- a/wiki/DesignOverview.wiki
+++ b/wiki/DesignOverview.wiki
@@ -10,4 +10,4 @@ General description what the game should be.
 
 = Content =
 
-The specific parts
+  * Design description [DesignImperialism original Imperialism]
