Edited wiki page IdeaSandBox through web user interface.

--- a/wiki/IdeaSandBox.wiki
+++ b/wiki/IdeaSandBox.wiki
@@ -8,3 +8,9 @@
 *History*
 
   * Great scientists, generals with background info
+
+
+----
+
+Technical hints
+  * http://code.google.com/p/heekscad/wiki/HowtoAddImagesToWiki
