Edited wiki page IdeaSandBox through web user interface.

--- a/wiki/IdeaSandBox.wiki
+++ b/wiki/IdeaSandBox.wiki
@@ -9,6 +9,17 @@
 
   * Great scientists, generals with background info
 
+----
+
+Links
+  * http://www.mobygames.com/game/imperialism with review
+  * http://thedailyimperialist.net/
+  * http://www.gamefaqs.com/pc/197614-imperialism
+  * http://www.gamespot.com/imperialism/platform/pc
+  * http://www.gamerankings.com/pc/197614-imperialism/index.html
+  * http://s1.zetaboards.com/Imperilist/index/
+  * http://www.jeuxvideopc.com/jeux/7555-imperialism.php
+  * http://translate.google.de/translate?sl=ru&tl=en&js=n&prev=_t&hl=de&ie=UTF-8&layout=2&eotf=1&u=http%3A%2F%2Fgameslist.narod.ru%2Fstrategy%2F170.html&act=url
 
 ----
 
