Edited wiki page DeveloperOverview through web user interface.

--- a/wiki/DeveloperOverview.wiki
+++ b/wiki/DeveloperOverview.wiki
@@ -1,2 +1,2 @@
 #summary Starting point for the developer/implementation section.
-#labels Phase-Implementation
+#labels Phase-Implementation,Featured
