Edited wiki page RoadMap through web user interface.

--- a/wiki/RoadMap.wiki
+++ b/wiki/RoadMap.wiki
@@ -1,5 +1,5 @@
 #summary Detailed roadmap for coming releases.
-#labels Phase-Implementation
+#labels Phase-Implementation,Featured
 
 =Next release=
 
