Edited wiki page DeveloperOverview through web user interface.

--- a/wiki/DeveloperOverview.wiki
+++ b/wiki/DeveloperOverview.wiki
@@ -1,2 +1,6 @@
 #summary Starting point for the developer/implementation section.
 #labels Phase-Implementation,Featured
+
+
+General guidelines
+  * [CodingStandards Coding standards]
