--- a/wiki/DesignGeneralization.wiki
+++ b/wiki/DesignGeneralization.wiki
@@ -1,7 +1,7 @@
 #summary Generalizes the new design to see if there is a broader application area.
 #labels Phase-Design
 
-Aim: carefully evaluate generalizations and abtractions of the concept to exploit synergy effects and create a bunch of highly interesting strategy games with many different settings on the same plattform easily. Therefore common parts must be identified.
+*Aim*: carefully evaluate generalizations and abtractions of the concept to exploit synergy effects and create a bunch of highly interesting strategy games with many different settings on the same plattform easily. Therefore common parts must be identified.
 
 =List of possible generalizations, abstractions=
 
@@ -23,4 +23,4 @@ Extending provinces a lot, expanding research a lot. Exploring the map (now full
 
 *Massive Multiplayer*
 
-For example in a SciFi setting and instead of provinces we have space battles.
+For example in a Sci-Fi setting and instead of provinces we have space battles.
