--- a/wiki/IdeaSandBox.wiki
+++ b/wiki/IdeaSandBox.wiki
@@ -14,6 +14,9 @@ Links
   * http://www.gamefaqs.com/pc/197614-imperialism/faqs/16042 (FAQ/strategy guide)
   * http://www.gamerevolution.com/review/imperialism
 
+General
+  * http://books.google.de/books?id=31XHdVXlbt0C
+
 ----
 
 Technical hints
