--- a/wiki/DesignBrainstorming.wiki
+++ b/wiki/DesignBrainstorming.wiki
@@ -1,4 +1,5 @@
 #summary At the beginning of the design a loose collection of ideas.
+#labels Phase-Design
 
 *Battles*
 
@@ -6,11 +7,43 @@
   * Simple Panzer General like mini game on hex tiles.
   * Terrain is determined from defending province (and specific)
 
+*Units*
+
+  * Long ranged, vulnerable artillery
+  * Cheap infantry (militia), short, soft attack
+  * Machine gun, stronger infantry, good against cities
+  * Tanks (late game), hard attack, however not in cities
+
+  * Fast units vs slower (stronger) units
+  * Artillery effective against slow units, Slow units effective against fast units, Fast units effective against artillery
+  * Expensive/long time to train units vs. cheap (less strong, but many) units
+
 *History*
 
-  * Great scientists, generals with background info
+  * Great scientists, generals with background info, historical background info
+
+*Diplomacy*
+
+  * Treaties with 10 years/rounds fixed peace possible
 
 *Industry*
 
-  * Only one type of (lets call them engineers), can do mining, ralways, ..., need time and money to train and comes directly from the worker pool, can be removed to unskilled worker again
-  * Exploration is a nationwide mission, also performed from engineers. Takes some time and will reveal some (random) resources. Indication if there is anything left in the country to explore.
+  * Only one type of (lets call them engineers), can do mining, railways, ..., need time and money to train and comes directly from the worker pool, can be removed to unskilled worker again
+  * Exploration is a nationwide mission, also performed from engineers or from scientists. Takes some time and will reveal some (random) resources. Indication if there is anything left in the country to explore.
+
+*Research*
+
+  * Only minor aspect of the game, not too much concentration 10% of working force should be enough
+  * A chained map of researchable technologies as in Civilization
+  * Scientists can either explore country
+  * Different independent strands: economical strand, militaristic strand, cultural (technological strand)?
+
+  * Typical militaristic techs: More ground experience, kind of refuelling after battle, higher morale
+  * Typical economical techs: Higher taxes, ...
+  * Typical cultural techs: Higher tech efficiency, higher cultural ranking, more diplomatic influence
+
+*Victory conditions*
+
+  * Military victory: 66% of provinces conquered
+  * Diplomatic victory: 66% of votes in governor council
+  * Cultural victory: First to achieve a certain number of culture points and builds a special wonder(?)
