Edited wiki page DesginTrifles through web user interface.

--- a/wiki/DesginTrifles.wiki
+++ b/wiki/DesginTrifles.wiki
@@ -3,3 +3,4 @@
 
   * Do we want to have customized mouse cursors? Easy to implement, but is there any real benefit?
   * Do we need a newspaper or advisors? Do they add to the game experience?
+  * A clock (turned on by default) to inform you about the time in RL.
