Edited wiki page DeveloperOverview through web user interface.

--- a/wiki/DeveloperOverview.wiki
+++ b/wiki/DeveloperOverview.wiki
@@ -1,6 +1,10 @@
 #summary Starting point for the developer/implementation section.
 #labels Phase-Implementation,Featured
 
+=Current status=
 
-General guidelines
+  * [RoadMap Roadmap]
+
+=Guidelines=
+
   * [CodeStandards Coding standards]
