--- a/wiki/DesignConceptMilitary.wiki
+++ b/wiki/DesignConceptMilitary.wiki
@@ -46,9 +46,20 @@
 
 *Overview of unit values*
 
+||Property|| *Militia* || *Infantry 1* || *Infantry 2* || *Infantry 3* || *Artillery 1* || *Artillery 2* || *Artillery 3* || *Cavallery 1* || *Cavallery 2* || *Cavallery 3/Tanks* ||
+||Attack||6||8||10||12||6||7||8||8||10||14||
+||Range||1||1||1||1||3||4||5||1||1||2||
+||Movement||3||3||3||4||2||2||3||4||5||5||
+||Morale||60||70||80||90||70||70||80||80||90||100||
+||Cost||0.5||1||1.5||2.2||1.3||1.8||2.4||1.4||2.2||3.6||
+||Upkeep||-||1||1||1.1||1.2||1.2||1.3||1.2||1.2||1.4+oil||
 
 *Battlefield*
   * Hexagon of hex fields with 15 fields diagonal distance, city in the middle
 
 *Time*
   * 3 battle turns per game turn, if not resolved (city not occupied yet) continuation next round or abortion of fight if combat took place
+
+*Damage model*
+  * Unit 1 attacks unit 2 with attack values of *a1* and *a2*
+  * 
