Edited wiki page DesignOverview through web user interface.

--- a/wiki/DesignOverview.wiki
+++ b/wiki/DesignOverview.wiki
@@ -21,8 +21,10 @@ The game is written in Java using Swing for the user interface. The philosophy i
 
 = Design =
 
-*[DesignOfficialSpecification Official Specification]* of this game.
+Final *[DesignOfficialSpecification Official Specification]* of this game.
 
   * [DesignBrainstorming Brainstorming] - collection of cool ideas
+  * [DesignConceptMilitary Military] concept
+  * [DesignConceptIndustry Industrial] concept
   * [DesignTrifles Trifles] and minor issues
   * [DesignGeneralization Generalization] of the game concept
