--- a/wiki/DesignOfficialSpecification.wiki
+++ b/wiki/DesignOfficialSpecification.wiki
@@ -1,8 +1,10 @@
 #summary Main document describing the most detailed specification of our Imperialism remake.
 #labels Phase-Design
+See as [http://code.google.com/p/imperialism-remake/wiki/DesignOfficialSpecification?show=content html].
 
 *Imperialism remake - Official Specification v1 (2012 January)*
 <wiki:toc max_depth="1" />
+
 
 = How to win =
 
