Edited wiki page DesignConceptIndustry through web user interface.

--- a/wiki/DesignConceptIndustry.wiki
+++ b/wiki/DesignConceptIndustry.wiki
@@ -1,4 +1,4 @@
-#summary First consistent blueprint for the industrial model.
+#summary First consistent blueprint for the industrial/economial model.
 #labels Phase-Design
 
 *Worker pool*
@@ -44,9 +44,11 @@ All worker (specialized or not) belong to the worker pool. We have the following
   * Paper + skilled worker + garment + furniture + weapon = soldier in reserve
   * maybe also money
 
-* Trade flow, Consumption flow*
+*Economy, Trade flow, Consumption flow*
   * Your people can consume some of the things you produce, they will pay for it. They have a certain demand for paper, furniture, tools, garments and will pay for it. You can sell them a bit more (10-20%) and they will pay you, but less than the ordinary price. They will also buy imports, reducing your market share.
   * They produce more than they consume (otherwise it would be kind of meaningless, wouldn't it), so we can export the excess.
   * For export/trade we should specify the target nations and what amount we want to keep in store for later. The actual transactions are then made in a clever automatic way by the program.
   * If for some reason the global demand for food and luxury items cannot be fullfilled then starvation or reduced productivity will follow.
   * Basically the productivity will increase ever more in the game, giving rise to an ever greater army or other things.
+  * The demand of minor nation is slowly increasing with time, higher if the infrastructure is increased.
+  * Export-subventions or priority lists (for import, export) or diplomatic trade limit treaties (only import x tons, export y tons...) might all be legimitate means to dominate a minor nation.
