Edited wiki page DesignConceptStatistics through web user interface.

--- a/wiki/DesignConceptStatistics.wiki
+++ b/wiki/DesignConceptStatistics.wiki
@@ -2,3 +2,11 @@
 #labels Phase-Design
 
 We want that clever players can find out about their opponents plans and status to some extent if they are willing to read the stats. Also people love stats about their own empire and so on. So here is the place to think about what to give and when.
+
+*General stats about your empire*
+   * Number of provinces, Treasure, Military force, Tax rate
+   * Working population, Industrial output, infrastructure
+
+*Special stats about your enemy*
+  * Rankings without absolute values every x years
+  * Diplomatic relations, what they think of you, how likely war is
